added more ansible tasks

--- a/ansible/linux.yml
+++ b/ansible/linux.yml
@@ -2,8 +2,5 @@
 ---
 - name: test ansible playbook
   hosts: local
-  # print somethings
-  tasks:
-    - name: print hello world
-      debug:
-        msg: "Hello World"
+  roles:
+    - packages
