--- a/ansible/roles/packages/tasks/main.yml
+++ b/ansible/roles/packages/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: install tools
+- name: installing core packages
   become: yes
   apt:
     name: 
@@ -17,22 +17,48 @@
       - zip
       - tar
       - jq
-      # monitoring tools
-      - htop
-      - bandwhich
-      - bottom
-      - ctop
-      - iotop
-      - nload
       # network tools
       - net-tools
       - iputils-ping
       - dnsutils
+      # monitoring tools
+      - htop
+      - iotop
+      - iftop
+      - nload
+      - ctop
       # command line tools
-      - bat
       - exa
-      - fd-find
-      - ripgrep
-      - fzf
-      - tldr
     state: latest
+
+
+# install rust/cargo
+- name: check if cargo is installed
+  shell: command -v cargo
+  register: cargo_exists
+  ignore_errors: yes
+
+- name: Install Rust/Cargo
+  when: cargo_exists is failed
+  shell: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+  tags: rust
+
+
+# install some packages using cargo
+- name: Install bandwhich
+  community.general.cargo:
+    name: bandwhich
+    locked: true
+
+- name: Install bat
+  community.general.cargo:
+    name: bat
+    locked: true
+
+- name: Install bottom
+  community.general.cargo:
+    name: bottom
+    locked: true
+
+# import repos.yml
+- import_tasks: repos.yml
