--- a/ansible/roles/packages/tasks/main.yml
+++ b/ansible/roles/packages/tasks/main.yml
@@ -1,5 +1,15 @@
+---
+
+- name: add some apt repositories
+  become: true
+  apt_repository:
+    repo: "{{ item }}"
+    state: present
+  with_items:
+    - ppa:bashtop-monitor/bashtop
+
 - name: installing core packages
-  become: yes
+  become: true
   apt:
     name: 
       # build tools
@@ -9,6 +19,8 @@
       - automake
       - libtool
       - pkg-config
+      # snapd
+      - snapd
       # basic tools
       - git
       - curl
@@ -17,6 +29,7 @@
       - zip
       - tar
       - jq
+      - gh
       # network tools
       - net-tools
       - iputils-ping
@@ -27,38 +40,46 @@
       - iftop
       - nload
       - ctop
+      - bashtop
       # command line tools
+      - bat
       - exa
+      - fd-find
+      - fzf
+      - fzy
+      - ripgrep
+      - tmux
+      - zoxide
+      - zsh
+      - nnn
+      - neofetch
+      # languages tools
+      - python3-dev
+      - python3-pip
+      - python3-venv
+      - python3-setuptools
     state: latest
 
+# installing pip packages
+- name: installing pip packages
+  become: true
+  pip:
+    name:
+      - thefuck
+    state: latest
 
-# install rust/cargo
-- name: check if cargo is installed
-  shell: command -v cargo
-  register: cargo_exists
-  ignore_errors: yes
+- name: installing nvim
+  become: true
+  community.general.snap:
+    name:
+      - nvim
+    classic: true
 
-- name: Install Rust/Cargo
-  when: cargo_exists is failed
-  shell: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-  tags: rust
+- name: installing starship
+  become: true
+  shell: curl -fsSL https://starship.rs/install.sh | sh -s -- -y
+  args:
+    creates: /usr/local/bin/starship
 
 
-# install some packages using cargo
-- name: Install bandwhich
-  community.general.cargo:
-    name: bandwhich
-    locked: true
 
-- name: Install bat
-  community.general.cargo:
-    name: bat
-    locked: true
-
-- name: Install bottom
-  community.general.cargo:
-    name: bottom
-    locked: true
-
-# import repos.yml
-- import_tasks: repos.yml
