added more configs

--- a/ansible/roles/dlndot/tasks/main.yml
+++ b/ansible/roles/dlndot/tasks/main.yml
@@ -33,4 +33,12 @@
     src: ~/dlndot/nvim
     dest: ~/.config/nvim
     state: link
+
+  
+- name: .gitconfig
+  file:
+    src: ~/.config/.gitconfig
+    dest: ~/.gitconfig
+    state: link
+
    
