--- a/ansible/linux.yml
+++ b/ansible/linux.yml
@@ -1,8 +1,15 @@
-# test ansible playbook
 ---
-- name: test ansible playbook
+- name: Start the Automation
   hosts: local
+  gather_facts: true
+  become: yes
+  become_user: "{{ lookup('env', 'USER') }}"
+  pre_tasks:
+    - name: Update repositories cache
+      apt: update_cache=yes
+      become_user: root
+      changed_when: false
+  vars:
+    user: "{{ ansible_user_id }}"
   roles:
     - packages
-    - fonts
-    - dlndot
