--- a/ansible/roles/packages/tasks/install_cargo.yml
+++ b/ansible/roles/packages/tasks/install_cargo.yml
@@ -4,7 +4,7 @@
   register: cargo_exists
   ignore_errors: yes
 
-- name: package | rust cargo | Download Installer 
+- name: package | rust/cargo | Download Installer 
   when: cargo_exists is failed
   get_url:
     url: https://sh.rustup.rs
@@ -14,7 +14,7 @@
   tags: 
     - rust
 
-- name: package | rust cargo | Install 
+- name: package | rust/cargo | Install 
   when: cargo_exists is failed
   shell: /tmp/rustup.sh -y
   tags: 
