--- a/ansible/linux.yml
+++ b/ansible/linux.yml
@@ -1,15 +1,8 @@
 ---
-- name: Start the Automation
+- name: Setting up the system
   hosts: local
   gather_facts: true
   become: yes
   become_user: "{{ lookup('env', 'USER') }}"
-  pre_tasks:
-    - name: Update repositories cache
-      apt: update_cache=yes
-      become_user: root
-      changed_when: false
-  vars:
-    user: "{{ ansible_user_id }}"
   roles:
     - packages
