--- a/ansible/roles/packages/tasks/main.yml
+++ b/ansible/roles/packages/tasks/main.yml
@@ -1,15 +1,11 @@
 ---
-# import install_rust.yml task
-- import_tasks: install_rust.yml
 
-- name: package | bandwhich | install
-  community.general.cargo:
-    name: bandwhich
-    state: latest
+# import tasks
 
-- name: package | bandwhich | add capabilities
-  become: yes
-  shell: sudo setcap cap_sys_ptrace,cap_dac_read_search,cap_net_raw,cap_net_admin+ep $(command -v bandwhich)
+- import_tasks: install_cargo.yml
+- import_tasks: install_bandwhich.yml
+
+
 
 - name: package | bottom | install
   community.general.cargo:
