--- a/ansible/roles/packages/tasks/main.yml
+++ b/ansible/roles/packages/tasks/main.yml
@@ -15,6 +15,8 @@
     - tree
     - ruby
     - ruby-dev
+    - rubygems
+    - fzf
     - neofetch
 
 
@@ -34,7 +36,6 @@
     - ripgrep
     - fd-find
     - zoxide
-    - eza
     - starship
    
 
